2004-12-31  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/Button.xml
	* en/Gtk/Calendar.xml
	* en/Gtk/ButtonBox.xml
	* en/Gtk/Bindings.xml
	* en/Gtk/CellRenderer.xml: Added docs.

2004-12-31  Shane Landrum  <epicene@pobox.com>

	* en/Gtk/ArgFlags.xml
	* en/Gtk/Arg.xml: Added "Do not use" marks.
	* en/Gtk/Action.xml
	* en/Gtk/AddWidgetArgs.xml
	* en/Gtk/Alignment.xml
	* en/Gtk/AccelGroup.xml: Added docs

2004-12-31  Shane Landrum  <epicene@pobox.com>
	
	* en/Gtk/FileSystem.xml: Wording tweak.
	* en/Gtk/ActionGroup.xml
	* en/Gtk/Action.xml
	* en/Gtk/ActionEntry.xml
	* en/Gtk/AccelGroup.xml
	* en/Gtk/AccelMap.xml: Added docs.

2004-12-31 Shane Landrum <epicene@pobox.com>

	* en/Gtk/FileSystem.xml
	* en/Gtk/FileSystemUnix.xml
	* en/Gtk/FileSystemVolume.xml
	* en/Gtk/FileSystemWin32.xml: Filesystem docs.
	* en/Gtk/FilesAddedHandler.xml	
	* en/Gtk/FilesChangedHandler.xml
	* en/Gtk/FilesRemovedHandler.xml: Handler docs.
	* en/Gtk/FileInfoType.xml
	* en/Gtk/FileSystemError.xml: Docs for some enums.
	
2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/FileSystem.xml
	* en/Gtk/FileInfo.xml
	* en/Gtk/FileInfoType.xml
	* en/Gtk/FileSystemUnix.xml
	* en/Gtk/FileSystemVolume.xml
	* en/Gtk/FileSystemWin32.xml
	* en/Gtk/FileFilterInfo.xml: Docs for filesystem-handling classes.
	
2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/IconSource.xml
	* en/Gtk/IconThemeFile.xml
	* en/Gtk/IconThemeFileParseError.xml
	* en/Gtk/IconThemeFileSectionFunc.xml
	* en/Gtk/IconTheme.xml
	* en/Gtk/IconThemeFileLineFunc.xml: Docs for icon-theme classes.

2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/Scale.xml
	* en/Gtk/Paned.xml
	* en/Gtk/ProgressBar.xml
	* en/Gtk/Plug.xml
	* en/Gtk/MovementStep.xml: Docs, some for 2.4 changes.

2004-12-30 Shane Landrum <epicene@pobox.com>

	* en/Gtk/FilesAddedArgs.xml
	* en/Gtk/FilePath.xml
	* en/Gtk/FilesRemovedArgs.xml
	* en/Gtk/FileFolder.xml
	* en/Gtk/FilesChangedArgs.xml: Filesystem-handling docs.
	* en/Gtk/ObjectRequestedArgs.xml