@@ -9,8 +9,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Renders a separator in a cell.</summary>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.CellRendererText</BaseTypeName>
@@ -72,9 +72,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Protected constructor.</summary>
         <returns>a <see cref="T:Gtk.CellRendererSepText" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
