@@ -11,7 +11,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>Renders text in a cell</summary>
-    <remarks>Used to add text to a <see cref="T:Gtk.TreeView" /></remarks>
+    <remarks>Used to add text to a <see cref="T:Gtk.TreeView" />.</remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.CellRenderer</BaseTypeName>
@@ -461,9 +461,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether or not to keep all text in a single paragraph.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Language">
@@ -474,9 +474,12 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>The language this text is in, as an ISO code. </summary>
         <returns>a <see cref="T:System.String" /></returns>
-        <remarks>To be added</remarks>
+        <remarks>
+	  Pango can use this as a hint when rendering the text. If you 
+	  don't understand this parameter, you probably don't need it.
+	</remarks>
       </Docs>
     </Member>
   </Members>
