@@ -88,11 +88,11 @@
         <Parameter Name="value" Type="GLib.Value" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Sets the value of <paramref name="renderer"/>'s property <paramref name="property"/> to <paramref name="value"/>, then resizes and redraws this cell view.</summary>
         <param name="renderer">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="property">a <see cref="T:System.String" /></param>
         <param name="value">a <see cref="T:GLib.Value" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GetSizeOfRow">
@@ -127,7 +127,7 @@
         <summary>To be added</summary>
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="position">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="PackEnd">
@@ -144,7 +144,7 @@
         <summary>To be added</summary>
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="expand">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="PackStart">
@@ -161,7 +161,7 @@
         <summary>To be added</summary>
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="expand">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="AddAttribute">
@@ -180,7 +180,7 @@
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
         <param name="attribute">a <see cref="T:System.String" /></param>
         <param name="column">a <see cref="T:System.Int32" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ClearAttributes">
@@ -195,7 +195,7 @@
       <Docs>
         <summary>To be added</summary>
         <param name="cell">a <see cref="T:Gtk.CellRenderer" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Clear">
@@ -207,7 +207,7 @@
       <Parameters />
       <Docs>
         <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -356,7 +356,7 @@
         <param name="func">a <see cref="T:Gtk.CellLayoutDataFunc" /></param>
         <param name="func_data">a <see cref="T:System.IntPtr" /></param>
         <param name="destroy">a <see cref="T:System.IntPtr" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
