@@ -10,7 +10,7 @@
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
     <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <remarks></remarks>
   </Docs>
   <Base>
     <BaseTypeName>Gtk.MenuItem</BaseTypeName>
@@ -41,7 +41,7 @@
         <summary>To be added</summary>
         <param name="markup">a <see cref="T:System.String" /></param>
         <returns>a <see cref="T:Gtk.CellViewMenuItem" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="NewWithText">
@@ -57,7 +57,7 @@
         <summary>To be added</summary>
         <param name="text">a <see cref="T:System.String" /></param>
         <returns>a <see cref="T:Gtk.CellViewMenuItem" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="Finalize">
@@ -107,9 +107,9 @@
       <ReturnValue />
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <returns>a <see cref="T:Gtk.CellViewMenuItem" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -121,11 +121,11 @@
         <Parameter Name="path" Type="Gtk.TreePath" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <param name="model">a <see cref="T:Gtk.TreeModel" /></param>
         <param name="path">a <see cref="T:Gtk.TreePath" /></param>
         <returns>a <see cref="T:Gtk.CellViewMenuItem" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName=".ctor">
@@ -136,10 +136,10 @@
         <Parameter Name="pixbuf" Type="Gdk.Pixbuf" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Public constructor.</summary>
         <param name="pixbuf">a <see cref="T:Gdk.Pixbuf" /></param>
         <returns>a <see cref="T:Gtk.CellViewMenuItem" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="GType">
