@@ -200,9 +200,9 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether the menu item looks like a radio menu item.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="ShowToggle">
@@ -212,9 +212,9 @@
         <ReturnType>System.Boolean</ReturnType>
       </ReturnValue>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether this menu item can be toggled.</summary>
         <returns>a <see cref="T:System.Boolean" /></returns>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
     <Member MemberName="EmitToggled">
@@ -225,7 +225,7 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>Emits the "toggle" signal</summary>
+        <summary>Fires the <see cref="E:Gtk.CheckMenuItem.Toggle"/> event.</summary>
         <remarks></remarks>
       </Docs>
     </Member>
