@@ -285,7 +285,7 @@ class ComboSample
       <Docs>
         <summary>Specifies if the arrow (cursor) keys can be used to step through the items in the list.</summary>
         <param name="value">
-          <see langword="true" /> if the arrow keys can be used to step through the items in the list.</param>
+          A <see cref="T:System.Boolean" />; <see langword="true" /> if the arrow keys can be used to step through the items in the list.</param>
         <returns>
           <see langword="true" /> if the arrow keys can be used to step through the items in the list.</returns>
         <remarks>This is <see langword="true" /> by default.</remarks>
@@ -329,7 +329,7 @@ class ComboSample
         <Parameter Name="gtype" Type="GLib.GType" />
       </Parameters>
       <Docs>
-        <summary>Protected contstructor.</summary>
+        <summary>Protected constructor.</summary>
         <param name="gtype">a <see cref="T:GLib.GType" /></param>
         <returns>a <see cref="T:Gtk.Combo" /></returns>
         <remarks>Chain to this constructor if you have manually registered a native <see cref="T:GLib.GType" /> value for your subclass.</remarks>
@@ -358,10 +358,10 @@ class ComboSample
         <Parameter Name="ok_if_empty" Type="System.Boolean" />
       </Parameters>
       <Docs>
-        <summary>To be added</summary>
+        <summary>Whether entered values must already be present in the list.</summary>
         <param name="val">a <see cref="T:System.Boolean" /></param>
         <param name="ok_if_empty">a <see cref="T:System.Boolean" /></param>
-        <remarks>To be added</remarks>
+        <remarks></remarks>
       </Docs>
     </Member>
   </Members>
