@@ -1,3 +1,14 @@
+2005-01-02  Shane Landrum  <epicene@pobox.com>
+
+	* en/Gtk/ComboBox.xml
+	* en/Gtk/CellViewMenuItem.xml
+	* en/Gtk/CellView.xml
+	* en/Gtk/CellRendererSepText.xml
+	* en/Gtk/ConnectProxyArgs.xml
+	* en/Gtk/Combo.xml
+	* en/Gtk/CellRendererText.xml
+	* en/Gtk/CheckMenuItem.xml: Added docs.
+
 2004-12-31  Shane Landrum  <epicene@pobox.com>
 
 	* en/Gtk/Button.xml
